--- a/hotel_website/about.html
+++ b/hotel_website/about.html
@@ -10,6 +10,11 @@
     />
     <meta name="keywords" content="hotel, boston hotel, zurich hotel" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="./css/mobile.css"
+      media="screen and (max-width: 768px)"
+    />
     <title>Hotel BT | About</title>
   </head>
   <body>
@@ -20,7 +25,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="current" href="about.html">About</a></li>
-            <li><a href="Contact.html">About</a></li>
+            <li><a href="Contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
