--- a/hotel_website/contact.html
+++ b/hotel_website/contact.html
@@ -16,6 +16,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="./css/mobile.css"
+      media="screen and (max-width: 768px)"
+    />
     <title>Hotel BT | Contact</title>
   </head>
   <body>
@@ -26,7 +31,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a class="current" href="Contact.html">About</a></li>
+            <li><a class="current" href="Contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
