--- a/edgeledger_website/index.html
+++ b/edgeledger_website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="./css/mobile.css"
@@ -14,7 +15,6 @@
       href="./css/widescreen.css"
       media="screen and (min-width: 1100px)"
     />
-    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -25,16 +25,17 @@
   </head>
   <body id="home">
     <!-- Nav bar -->
+
     <nav id="navbar">
       <h1 class="logo">
-        <span class="text-primary"> <i class="fas fa-book-open"></i> Edge</span
+        <span class="text-primary"> <i class="fas fa-book-open"></i>Edge</span
         >Legger
       </h1>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">What</a></li>
-        <li><a href="#">Who</a></li>
-        <li><a href="#">Content</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#what">What</a></li>
+        <li><a href="#who">Who</a></li>
+        <li><a href="#contact">Content</a></li>
       </ul>
     </nav>
     <!-- Header: Showcase -->
@@ -51,5 +52,144 @@
         <a href="#what" class="btn">Read More</a>
       </div>
     </header>
+    <section id="what" class="bg-light py-1">
+      <div class="container">
+        <h2 class="m-heading text-center">
+          <span class="text-primary">What</span> We Do
+        </h2>
+        <div class="items">
+          <div class="item">
+            <i class="fas fa-university fa-2x"> </i>
+            <div>
+              <h3>Investment Banking</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
+                ad!
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <i class="fas fa-book-reader fa-2x"> </i>
+            <div>
+              <h3>Portfolio Management</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
+                ad!
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <i class="fas fa-pencil-alt fa-2x"> </i>
+            <div>
+              <h3>Tax & Custodial</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
+                ad!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Section: Who We Are  -->
+    <section id="who">
+      <div class="who-img"></div>
+      <div class="who-text bg-dark p-2">
+        <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint,
+          blanditiis quae! Asperiores tempore unde incidunt alias dolorem
+          voluptates odit. Molestias earum temporibus maiores. Dolorum aperiam
+          dicta cupiditate soluta est asperiores!
+        </p>
+        <h3>Our Team</h3>
+        <ul class="list">
+          <li>Mark Smith: CEO</li>
+          <li>Shannon Johnson: CFO</li>
+          <li>John Corbit: Lead Accountant</li>
+          <li>Janet Williams: Investment Manager</li>
+          <li>Kara Jackson: Senior Accountant</li>
+        </ul>
+      </div>
+    </section>
+    <!-- Section: Clients -->
+    <section id="clients" class="py-1">
+      <div class="container">
+        <h2 class="m-heading text-center">
+          <span class="text-primary">Our</span> Client
+        </h2>
+        <div class="items py-1">
+          <div><img src="./img/logos/logo1.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo2.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo3.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo4.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo5.png" alt="Client" /></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section: Contact -->
+    <section id="contact">
+      <div class="contact-form bg-primary p-2">
+        <h2 class="m-heading">Contact Us</h2>
+        <p>Please use the form below to contact us.</p>
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Enter Name" />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              placeholder="Enter Email"
+            />
+          </div>
+          <div class="form-group">
+            <label for="phone-number">Phone Number</label>
+            <input
+              type="text"
+              name="phone-number"
+              id="phone-number"
+              placeholder="Enter Phone Number"
+            />
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea
+              type="text"
+              name="message"
+              id="message"
+              placeholder="Enter Message"
+            ></textarea>
+          </div>
+          <input type="submit" value="Send" class="btn btn-dark" />
+        </form>
+      </div>
+      <div class="map"></div>
+    </section>
+    <footer id="main-footer" class="bg-dark">
+      <div class="container">
+        <p>Copyright &copy; 2019, Edge Ledger, All Rights Reserved</p>
+      </div>
+    </footer>
+
+    <!-- JQuery CDN -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Local JS File  -->
+    <script src="js/main.js"></script>
+    <!-- Google Maps -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCumFjA31lZLUHm4Gdmn2eT1odj0VV1Nls&callback=initMap"
+      async
+      defer
+    ></script>
   </body>
+  <!-- AIzaSyCumFjA31lZLUHm4Gdmn2eT1odj0VV1Nls -->
 </html>
